<resources>
    <string name="app_name">AudioRecorder</string>
    <string name="timer">00:00:00</string>
    <string name="delete_recording">Delete Record</string>
    <string name="play_audio">Play Audio</string>
    <string name="file_name">File Name</string>
    <string name="meta_data">Meta Data</string>
    <string name="record_audio">Record Audio</string>
    <string name="save_recording">Save Recording</string>
    <string name="record_list">Record List</string>
    <string name="duration_date">%1$d %2$d</string>
</resources>