<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:textSize="56sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.292" />

        <com.audio.audiorecorder.extras.WaveformView
            android:id="@+id/recordingWave"
            android:layout_width="match_parent"
            android:layout_height="400px"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutId"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <LinearLayout
            android:id="@+id/linearLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/ic_image_button_background"
                android:contentDescription="@string/delete_recording"
                android:src="@drawable/ic_baseline_clear_pause" />

            <ImageButton
                android:id="@+id/record"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/ic_play_pause"
                android:contentDescription="@string/record_audio"
                android:src="@drawable/ic_baseline_stop_circle" />

            <ImageButton
                android:id="@+id/recordList"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/ic_image_button_background"
                android:src="@drawable/ic_baseline_menu"
                android:contentDescription="@string/record_list"/>

            <ImageButton
                android:id="@+id/save"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/ic_image_button_background"
                android:contentDescription="@string/save_recording"
                android:src="@drawable/ic_baseline_done"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bottomSheetBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/opacityColor"
        android:visibility="gone" />

    <include
        android:id="@+id/saveBottomSheetId"
        layout="@layout/bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>